# ssh-askpass-fullscreen

./: .gitignore  AUTHORS  ChangeLog  Makefile  README  configure.ac  ssh-askpass-fullscreen.c
src/: Makefile.am  ssh-askpass-fullscreen.c
